--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ Flask = "^2.2.0"
 urllib3 = "^1.26.12"
 django-colorbundle = "^0.1.2"
 pandas = "^2.0.2"
+pyperclip = "^1.8.2"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
